fix: alignment in contact form

--- a/component/contact-us/contact.css
+++ b/component/contact-us/contact.css
@@ -26,3 +26,7 @@
     align-items: end;
     padding-right: 20%;
 }
+
+.details-item{
+    padding: 2px;
+}
